# toyshop-api

./: .env  .env.example  app.py  migrations.sh  pyproject.toml
migrations/: env.py
migrations/versions/: d08afaad28e0_.py
src/app/: __init__.py
src/app/configs/: base.py  extensions.py  swagger.py
src/app/models/: base_model.py  users.py
src/app/resources/: base_resources.py  users.py
src/app/schemas/: user.py
src/app/utils/: exceptions.py  models_discovery.py  validations.py
